--- a/index.css
+++ b/index.css
@@ -47,3 +47,13 @@ border: 1px solid black;
 .res-logo {
     width: 100%;
 }
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card {
+    width:200px;
+    height: 400px;
+    background-color: #f0f0f0;
+    margin: 10px;
+}
