--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+}
 .header {
 display: flex;
 justify-content: space-between;
@@ -24,22 +31,77 @@ border: 1px solid black;
     margin: 10px;
 }
 
+.nav-items > ul > li >a{
+    color: black;
+}
+
 .res-container {
-    margin: auto;
+    /* margin: auto;
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
+
+    padding: 0px;
+    list-style: none;
+    margin-block-end: 0px;
+    display: grid;
+    -webkit-box-align: start;
+    align-items: start;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 32px;
+    margin: 32px 16px;
+}
+
+.res-logo {
+    height: 180px;
+    border-radius: 16px;
+}
+
+.res-card:hover img{
+    transform: scale(1.1,1.1);
+    border-radius: 16px;
+    transition: 0.5s;
+}
+.res-card h1{
+    color: black;
+  text-decoration-line: none;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    font-family: Basis_Grotesque_Pro_Bold;
+}
+.res-card h3{
+    color: black;
+    text-decoration-line: none;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 24px;
+      font-family: Basis_Grotesque_Pro_Bold;
+}
+
+.res-card h4{
+    color: green ;
+  
+}
+.res-card h5{
+    font-weight: 200;
+    font-size: 16px;
+    line-height: 19px;
+    color: #02060C99;
 }
 .res-card {
     margin: 5px;
     padding: 5px;
     width:220px;
     height: auto;
-    background-color: #f0f0f0;
+    /* transition: 0.8s; */
+    overflow: hidden;
+    cursor: pointer;
+    /* background-color: #f0f0f0; */
 }
-.res-card:hover {
+/* .res-card:hover {
     border: 1px solid black;
     cursor: pointer;
-}
+} */
 
 .search {
     padding: 10px;
