--- a/index.css
+++ b/index.css
@@ -119,3 +119,10 @@ border: 1px solid black;
     background-color: #f0f0f0;
     margin: 10px;
 }
+.user-card {
+    padding: 10px;
+    margin: 10px;
+    height:200px;
+    width: 400px;
+    background-color: #f0f0f0;
+}
