--- a/index.css
+++ b/index.css
@@ -1,128 +1,3 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-}
-.header {
-display: flex;
-justify-content: space-between;
-border: 1px solid black;
-}
-
-.logo {
-    width: 200px;
-    height: 80px;
-}
-
-.nav-items {
-    padding: 0px 20px;
-}
-
-.nav-items > ul {
-    font-size: 24px;
-    display: flex;
-    list-style-type: none;
-}
-
-.nav-items > ul > li {
-    padding: 10px;
-    margin: 10px;
-}
-
-.nav-items > ul > li >a{
-    color: black;
-}
-
-.res-container {
-    /* margin: auto;
-    display: flex;
-    flex-wrap: wrap; */
-
-    padding: 0px;
-    list-style: none;
-    margin-block-end: 0px;
-    display: grid;
-    -webkit-box-align: start;
-    align-items: start;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 32px;
-    margin: 32px 16px;
-}
-
-.res-logo {
-    height: 180px;
-    border-radius: 16px;
-}
-
-.res-card:hover img{
-    transform: scale(1.1,1.1);
-    border-radius: 16px;
-    transition: 0.5s;
-}
-.res-card h1{
-    color: black;
-  text-decoration-line: none;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;
-    font-family: Basis_Grotesque_Pro_Bold;
-}
-.res-card h3{
-    color: black;
-    text-decoration-line: none;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 24px;
-      font-family: Basis_Grotesque_Pro_Bold;
-}
-
-.res-card h4{
-    color: green ;
-  
-}
-.res-card h5{
-    font-weight: 200;
-    font-size: 16px;
-    line-height: 19px;
-    color: #02060C99;
-}
-.res-card {
-    margin: 5px;
-    padding: 5px;
-    width:220px;
-    height: auto;
-    /* transition: 0.8s; */
-    overflow: hidden;
-    cursor: pointer;
-    /* background-color: #f0f0f0; */
-}
-/* .res-card:hover {
-    border: 1px solid black;
-    cursor: pointer;
-} */
-
-.search {
-    padding: 10px;
-}
-.res-logo {
-    width: 100%;
-}
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-.shimmer-card {
-    width:200px;
-    height: 400px;
-    background-color: #f0f0f0;
-    margin: 10px;
-}
-.user-card {
-    padding: 10px;
-    margin: 10px;
-    height:200px;
-    width: 400px;
-    background-color: #f0f0f0;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
